Fix hover styling on mobile

--- a/client/src/app/home/home.page.scss
+++ b/client/src/app/home/home.page.scss
@@ -1,6 +1,8 @@
-table#beer-table tr:hover td {
-  background-color: #a3a3a3;
-  cursor: pointer;
+@media (hover: hover) {
+  table#beer-table tr:hover td  {
+    background-color: #a3a3a3;
+    cursor: pointer;
+  }
 }
 
 #camera-button-container {
